# cpp-pbni-extension-template

./: .gitignore  CMakeLists.txt  Makefile  README.md  conanfile.py  pbni-extension-template.pbproj  tpl.pbsln  version.axpv
.github/workflows/: autorelease.yml  release.yml
ci/backport/: version.json.tmpl
pbni/: CMakeLists.txt  Makefile  conanfile.py
pbni/src/: Example.cpp  Example.h
test/tst_tpl.pbl/: pb-extension-template.axpi  tst_tpl.sra
tpl1.pbl/: u_pbni_example.sru
